--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/outragedpinkracoon/election-map-d3#readme",
   "dependencies": {
     "d3": "^4.3.0",
+    "express": "^4.14.0",
     "handlebars": "^4.0.5"
   }
 }
