--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "d3": "^4.3.0",
     "express": "^4.14.0",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "highcharts": "^5.0.2"
   }
 }
