--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "express": "^4.14.0",
     "handlebars": "^4.0.5",
     "highcharts": "^5.0.2"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0"
   }
 }
